<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etInput3"
        android:layout_width="285dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput2"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etInput1"
        app:layout_constraintTop_toBottomOf="@+id/etInput1"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/divisionSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput3" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:text="@string/multiplicationSign"
        app:layout_constraintStart_toEndOf="@+id/btnDel"
        app:layout_constraintTop_toTopOf="@+id/btnDel" />

    <Button
        android:id="@+id/btnMin"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:text="@string/minusSign"
        app:layout_constraintStart_toEndOf="@+id/btnMul"
        app:layout_constraintTop_toTopOf="@+id/btnMul" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plusSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnMin"
        app:layout_constraintTop_toTopOf="@+id/btnMin" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/numberZeroStr"
        app:layout_constraintStart_toEndOf="@+id/btnAC"
        app:layout_constraintTop_toTopOf="@+id/btnAC" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/numberOneStr"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/numberTwoStr"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/numberThreeStr"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/numberFourStr"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/numberFiveStr"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/numberSixStr"
        app:layout_constraintEnd_toEndOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/numberSevenStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/numberEightStr"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/numberNineStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btnEqu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/equalsSign"
        app:layout_constraintEnd_toEndOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btnAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/clearButtonText"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnComma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/floatDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn0" />

</androidx.constraintlayout.widget.ConstraintLayout>